--- a/ascon_web_admin/.gitignore
+++ b/ascon_web_admin/.gitignore
@@ -1,7 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
 /.pnp
 .pnp.js
 
@@ -21,3 +20,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+node_modules/
+/backend/node_modules/
+/ascon_web_admin/node_modules/
+/ascon_mobile/build/
+.env
+.DS_Store
