--- a/ascon_mobile/web/manifest.json
+++ b/ascon_mobile/web/manifest.json
@@ -4,7 +4,7 @@
     "start_url": ".",
     "display": "standalone",
     "background_color": "#FFFFFF",
-    "theme_color": "#006400",
+    "theme_color": "#1B5E3A",
     "description": "A new Flutter project.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
