--- a/ascon_mobile/android/app/src/main/AndroidManifest.xml
+++ b/ascon_mobile/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,10 @@
     <application
         android:label="ASCON Alumni"
         android:name="${applicationName}"
-        android:icon="@mipmap/launcher_icon">
+        android:icon="@mipmap/launcher_icon"
+        
+        android:usesCleartextTraffic="true"> 
+        
         <activity
             android:name=".MainActivity"
             android:exported="true"
