--- a/ascon_mobile/pubspec.yaml
+++ b/ascon_mobile/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   url_launcher: ^6.3.2
   image_picker: ^1.0.7
   intl: ^0.19.0
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -25,7 +26,6 @@ dev_dependencies:
 
   # Tools for generating assets
   flutter_launcher_icons: ^0.13.1
-  flutter_native_splash: ^2.4.4
 
 flutter:
   uses-material-design: true
@@ -33,24 +33,15 @@ flutter:
     - assets/
 
 # ==========================================
-# SPLASH SCREEN CONFIGURATION
-# ==========================================
-#flutter_native_splash:
-#  color: "#FFFFFF"
-#  image: assets/logo_centered.png
-#  android_12:
-#    color: "#FFFFFF"
-#    icon_background_color: "#FFFFFF"
-#    image: assets/logo_centered.png
-
-# ==========================================
-# APP ICON CONFIGURATION (Home Screen & Web Favicon)
+# APP ICON (Logo Symbol Only)
 # ==========================================
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/logo.png"
   min_sdk_android: 21
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/logo.png"
   web:
     generate: true
     image_path: "assets/logo.png"
