--- a/ascon_mobile/pubspec.yaml
+++ b/ascon_mobile/pubspec.yaml
@@ -12,17 +12,20 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   http: ^1.6.0
-  shared_preferences: ^2.5.3
+  shared_preferences: ^2.5.4
   google_fonts: ^6.3.2
   url_launcher: ^6.3.2
   image_picker: ^1.0.7
-  intl: ^0.19.0
+  intl: ^0.20.2
   google_sign_in: ^6.2.1
+  firebase_core: ^3.6.0
+  firebase_messaging: ^15.1.3
+  flutter_local_notifications: ^17.2.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.4.0
 
@@ -35,18 +38,13 @@ flutter:
 # 🌊 NATIVE SPLASH SCREEN CONFIG
 # ==========================================
 flutter_native_splash:
-  color: "#FFFFFF"             # White background for Light Mode
-  image: "assets/splash_logo.png"
-  branding: "assets/splash_logo.png"
-
-  # ✅ FORCE WHITE IN DARK MODE
-  color_dark: "#FFFFFF"        # White background for Dark Mode
-  image_dark: "assets/splash_logo.png"
-
+  color: "#FFFFFF"
+  image: assets/images/splash_logo_with_text.png
+  
   android_12:
-    image: "assets/splash_logo.png"
+    color: "#FFFFFF"
+    image: assets/images/splash_logo_with_text.png
     icon_background_color: "#FFFFFF"
-    icon_background_color_dark: "#FFFFFF" # Force White on Android 12+ Dark Mode
 
   web: false
 
@@ -56,10 +54,17 @@ flutter_native_splash:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
+  
+  # KEEP the original for iOS/Web (they don't crop as much)
   image_path: "assets/logo.png"
+  
   min_sdk_android: 21
+  
+  # ANDROID ADAPTIVE ICONS
   adaptive_icon_background: "#FFFFFF"
-  adaptive_icon_foreground: "assets/logo.png"
+  # CHANGE THIS to your new padded image
+  adaptive_icon_foreground: "assets/images/launcher_icon_padded.png" 
+  
   web:
     generate: true
     image_path: "assets/logo.png"
