--- a/ascon_mobile/pubspec.yaml
+++ b/ascon_mobile/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_local_notifications: ^17.2.2
   jwt_decoder: ^2.0.1
   qr_flutter: ^4.1.0
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -33,8 +34,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  # ✅ IMPORTANT: Added assets/images/ so Flutter can find your new icons
   assets:
+    - .env
     - assets/
     - assets/images/
 
