--- a/ascon_mobile/pubspec.yaml
+++ b/ascon_mobile/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   jwt_decoder: ^2.0.1
   qr_flutter: ^4.1.0
   flutter_dotenv: ^5.1.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
