--- a/ascon_mobile/android/app/src/main/AndroidManifest.xml
+++ b/ascon_mobile/android/app/src/main/AndroidManifest.xml
@@ -36,5 +36,14 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="high_importance_channel" />
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/ic_notification" />
+            
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/brand_color" />
+
     </application>
 </manifest>
