--- a/ascon_mobile/pubspec.yaml
+++ b/ascon_mobile/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   qr_flutter: ^4.1.0
   flutter_dotenv: ^5.1.0
   cached_network_image: ^3.4.1
+  share_plus: ^12.0.1
+  add_2_calendar: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -39,6 +41,7 @@ flutter:
     - .env
     - assets/
     - assets/images/
+    - assets/images/logo.png
 
 # ==========================================
 # 🌊 NATIVE SPLASH SCREEN CONFIG
