--- a/ascon_mobile/pubspec.yaml
+++ b/ascon_mobile/pubspec.yaml
@@ -14,7 +14,6 @@ dependencies:
   http: ^1.6.0
   shared_preferences: ^2.5.4
   google_fonts: ^6.3.2
-  url_launcher: ^6.3.2
   image_picker: ^1.0.7
   intl: ^0.20.2
   google_sign_in: ^6.2.1
@@ -28,6 +27,8 @@ dependencies:
   share_plus: ^12.0.1
   add_2_calendar: ^3.0.1
   flutter_markdown: ^0.7.3
+  flutter_linkify: ^6.0.0
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +54,7 @@ flutter_native_splash:
   android_12:
     color: "#FFFFFF"
     icon_background_color: "#FFFFFF"
+    image: assets/logo.png
 
   web: false
 
