--- a/ascon_mobile/pubspec.yaml
+++ b/ascon_mobile/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   add_2_calendar: ^3.0.1
   flutter_linkify: ^6.0.0
   url_launcher: ^6.3.2
+  font_awesome_flutter: ^10.12.0
 
 dev_dependencies:
   flutter_test:
