--- a/ascon_mobile/pubspec.yaml
+++ b/ascon_mobile/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_linkify: ^6.0.0
   url_launcher: ^6.3.2
   font_awesome_flutter: ^10.12.0
+  video_player: ^2.8.2
 
 dev_dependencies:
   flutter_test:
@@ -45,13 +46,14 @@ flutter:
     - assets/
     - assets/images/
     - assets/images/logo.png
+    - assets/videos/facility_intro.mp4
 
 # ==========================================
 # 🌊 NATIVE SPLASH SCREEN CONFIG
 # ==========================================
 flutter_native_splash:
   color: "#FFFFFF"
-  
+
   android_12:
     color: "#FFFFFF"
     icon_background_color: "#FFFFFF"
@@ -68,8 +70,8 @@ flutter_launcher_icons:
   image_path: "assets/logo.png"
   min_sdk_android: 21
   adaptive_icon_background: "#FFFFFF"
-  adaptive_icon_foreground: "assets/images/icon_padded.png" 
-  
+  adaptive_icon_foreground: "assets/images/icon_padded.png"
+
   web:
     generate: true
     image_path: "assets/logo.png"
