--- a/ascon_mobile/pubspec.yaml
+++ b/ascon_mobile/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   url_launcher: ^6.3.2
   font_awesome_flutter: ^10.12.0
   video_player: ^2.8.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
