--- a/ascon_mobile/pubspec.yaml
+++ b/ascon_mobile/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   font_awesome_flutter: ^10.12.0
   video_player: ^2.8.2
   shimmer: ^3.0.0
+  socket_io_client: ^3.1.4
 
 dev_dependencies:
   flutter_test:
