--- a/ascon_mobile/pubspec.yaml
+++ b/ascon_mobile/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   url_launcher: ^6.3.2
   font_awesome_flutter: ^10.12.0
   video_player: ^2.8.2
+  file_picker: ^6.1.1
+  record: ^5.1.0           # For Voice Notes
+  audioplayers: ^6.0.0     # For Playing Voice Notes
+  permission_handler: ^11.3.0
   shimmer: ^3.0.0
   socket_io_client: ^3.1.4
 
