--- a/ascon_mobile/pubspec.yaml
+++ b/ascon_mobile/pubspec.yaml
@@ -30,12 +30,17 @@ dependencies:
   url_launcher: ^6.3.2
   font_awesome_flutter: ^10.12.0
   video_player: ^2.8.2
-  file_picker: ^6.1.1
-  record: ^5.1.0           # For Voice Notes
+  file_picker: ^8.1.4
+  record: ^6.0.0           # For Voice Notes
   audioplayers: ^6.0.0     # For Playing Voice Notes
   permission_handler: ^11.3.0
+  flutter_secure_storage: ^9.0.0
   shimmer: ^3.0.0
   socket_io_client: ^3.1.4
+  badges: ^3.1.2
+
+dependency_overrides:
+  record_platform_interface: 1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -43,7 +48,6 @@ dev_dependencies:
   flutter_lints: ^6.0.0
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.4.0
-  flutter_secure_storage: ^9.0.0
 
 flutter:
   uses-material-design: true
