--- a/ascon_mobile/android/app/src/main/AndroidManifest.xml
+++ b/ascon_mobile/android/app/src/main/AndroidManifest.xml
@@ -25,11 +25,9 @@
         android:label="ASCON Alumni"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon"
-        
         android:allowBackup="false"
-        android:fullBackupContent="false">
-        
-        <activity
+        android:fullBackupContent="false"
+        android:usesCleartextTraffic="true"> <activity
             android:name=".MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
