--- a/ascon_mobile/pubspec.yaml
+++ b/ascon_mobile/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   cached_network_image: ^3.4.1
   share_plus: ^12.0.1
-  open_file_plus: ^3.0.0
+  open_file: ^3.5.0
   add_2_calendar: ^3.0.1
   flutter_linkify: ^6.0.0
   url_launcher: ^6.3.2
