--- a/ascon_mobile/pubspec.yaml
+++ b/ascon_mobile/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   socket_io_client: ^3.1.4
   badges: ^3.1.2
   vibration: ^3.1.0
+  go_router: ^13.0.0
 
 dev_dependencies:
   flutter_test:
