--- a/ascon_mobile/pubspec.yaml
+++ b/ascon_mobile/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   badges: ^3.1.2
   vibration: ^3.1.0
   go_router: ^13.0.0
+  intl_phone_field: ^3.2.0
 
 dev_dependencies:
   flutter_test:
