--- a/ascon_mobile/pubspec.yaml
+++ b/ascon_mobile/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   http: ^1.6.0
   shared_preferences: ^2.5.4
   google_fonts: ^7.0.0
-  image_picker: ^1.0.7
+  image_picker: ^1.2.1
   intl: ^0.20.2
   google_sign_in: ^6.2.1
   firebase_core: ^3.6.0
@@ -42,6 +42,7 @@ dependencies:
   vibration: ^3.1.0
   go_router: ^13.0.0
   intl_phone_field: ^3.2.0
+  timeago: ^3.7.1
 
 dev_dependencies:
   flutter_test:
