--- a/ascon_mobile/pubspec.yaml
+++ b/ascon_mobile/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   go_router: ^13.0.0
   intl_phone_field: ^3.2.0
   timeago: ^3.7.1
+  flutter_markdown: ^0.6.14
 
 dev_dependencies:
   flutter_test:
