--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,6 +6,7 @@ PORT=5000
 # Comma-separated list of allowed URLs. 
 # MUST include your Local React Admin, Flutter Web Port, and Production URLs.
 ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5000,https://asconalumni.netlify.app
+CLIENT_URL=https://asconalumni.netlify.app
 
 # Security Secrets
 JWT_SECRET=your_super_secret_access_key
