--- a/ascon_mobile/pubspec.yaml
+++ b/ascon_mobile/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   http: ^1.6.0
+  path_provider: ^2.1.2
   shared_preferences: ^2.5.4
   google_fonts: ^7.0.0
   image_picker: ^1.2.1
