--- a/ascon_mobile/pubspec.yaml
+++ b/ascon_mobile/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  http: ^1.2.1             # ✅ Valid version
+  http: ^1.2.1
   path_provider: ^2.1.2
   shared_preferences: ^2.5.4
   google_fonts: ^7.0.0
@@ -32,7 +32,7 @@ dependencies:
   url_launcher: ^6.3.2
   font_awesome_flutter: ^10.12.0
   video_player: ^2.8.2
-  file_picker: ^8.1.4      # ✅ Valid version
+  file_picker: ^8.1.4
   record: ^6.0.0
   audioplayers: ^6.0.0
   permission_handler: ^11.3.0
@@ -46,6 +46,7 @@ dependencies:
   timeago: ^3.7.1
   flutter_markdown: ^0.6.14
   flutter_webrtc: ^1.3.0
+  local_auth: ^2.3.0
 
 dev_dependencies:
   flutter_test:
