--- a/ascon_mobile/pubspec.yaml
+++ b/ascon_mobile/pubspec.yaml
@@ -10,21 +10,32 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_riverpod: ^2.6.1
+  # ✅ Updated State Management
+  flutter_riverpod: ^3.2.1 
+  
+  # ✅ UI & Utility
   cupertino_icons: ^1.0.8
   http: ^1.2.1
   path_provider: ^2.1.2
   shared_preferences: ^2.5.4
-  google_fonts: ^7.0.0
+  google_fonts: ^8.0.1
   image_picker: ^1.2.1
   intl: ^0.20.2
-  google_sign_in: ^6.2.1
-  firebase_core: ^3.6.0
-  firebase_messaging: ^15.1.3
-  flutter_local_notifications: ^17.2.2
+  
+  # ✅ Firebase & Auth
+  google_sign_in: ^7.2.0
+  firebase_core: ^4.4.0
+  firebase_messaging: ^16.1.1
+  flutter_local_notifications: ^20.0.0
   jwt_decoder: ^2.0.1
+  local_auth: ^3.0.0
+  
+  # ✅ Storage & Environment
+  flutter_secure_storage: ^10.0.0
+  flutter_dotenv: ^6.0.0
+  
+  # ✅ Content Display
   qr_flutter: ^4.1.0
-  flutter_dotenv: ^5.1.0
   cached_network_image: ^3.4.1
   share_plus: ^12.0.1
   open_file: ^3.5.0
@@ -33,27 +44,31 @@ dependencies:
   url_launcher: ^6.3.2
   font_awesome_flutter: ^10.12.0
   video_player: ^2.8.2
-  file_picker: ^8.1.4
+  
+  # ✅ Replaced Discontinued Package
+  flutter_markdown_plus: ^1.0.7
+  
+  # ✅ File & Media
+  file_picker: ^10.3.10
   record: ^6.0.0
   audioplayers: ^6.0.0
-  permission_handler: ^11.3.0
-  flutter_secure_storage: ^9.0.0
+  permission_handler: ^12.0.1
   shimmer: ^3.0.0
   socket_io_client: ^3.1.4
   badges: ^3.1.2
   vibration: ^3.1.0
-  go_router: ^13.0.0
+  
+  # ✅ Updated Router
+  go_router: ^17.1.0
   intl_phone_field: ^3.2.0
   timeago: ^3.7.1
-  flutter_markdown: ^0.6.14
   flutter_webrtc: ^1.3.0
-  local_auth: ^2.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^6.0.0
-  flutter_launcher_icons: ^0.13.1
+  flutter_lints: ^5.0.0 
+  flutter_launcher_icons: ^0.14.4
   flutter_native_splash: ^2.4.0
 
 flutter:
@@ -65,22 +80,14 @@ flutter:
     - assets/images/logo.png
     - assets/videos/
 
-# ==========================================
-# 🌊 NATIVE SPLASH SCREEN CONFIG
-# ==========================================
 flutter_native_splash:
   color: "#FFFFFF"
-
   android_12:
     color: "#FFFFFF"
     icon_background_color: "#FFFFFF"
     image: assets/logo.png
-
   web: false
 
-# ==========================================
-# 📱 APP ICON CONFIGURATION
-# ==========================================
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
@@ -88,7 +95,6 @@ flutter_launcher_icons:
   min_sdk_android: 21
   adaptive_icon_background: "#FFFFFF"
   adaptive_icon_foreground: "assets/images/icon_padded.png"
-
   web:
     generate: true
     image_path: "assets/logo.png"
