--- a/ascon_mobile/pubspec.yaml
+++ b/ascon_mobile/pubspec.yaml
@@ -5,13 +5,13 @@ publish_to: "none"
 version: 2.0.0+0
 
 environment:
-  sdk: ^3.8.1
+  sdk: ^3.0.0
 
 dependencies:
   flutter:
     sdk: flutter
-  # ✅ Updated State Management
-  flutter_riverpod: ^3.2.1 
+  # ✅ State Management
+  flutter_riverpod: ^2.6.1
   
   # ✅ UI & Utility
   cupertino_icons: ^1.0.8
@@ -23,15 +23,12 @@ dependencies:
   intl: ^0.20.2
   
   # ✅ Firebase & Auth
-  google_sign_in: ^7.2.0
-  firebase_core: ^4.4.0
-  firebase_messaging: ^16.1.1
-  flutter_local_notifications: ^20.0.0
-  jwt_decoder: ^2.0.1
-  local_auth: ^3.0.0
-  
-  # ✅ Storage & Environment
-  flutter_secure_storage: ^10.0.0
+  google_sign_in: ^6.2.2   
+  firebase_core: ^3.8.0     
+  firebase_messaging: ^15.2.0 
+  flutter_local_notifications: ^18.0.1 
+  local_auth: ^2.3.0        
+  flutter_secure_storage: ^9.2.2 
   flutter_dotenv: ^6.0.0
   
   # ✅ Content Display
