--- a/ascon_mobile/pubspec.yaml
+++ b/ascon_mobile/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  # ✅ State Management
+  # ✅ State Management (v2.x is stable)
   flutter_riverpod: ^2.6.1
   
   # ✅ UI & Utility
@@ -18,54 +18,59 @@ dependencies:
   http: ^1.2.1
   path_provider: ^2.1.2
   shared_preferences: ^2.5.4
-  google_fonts: ^8.0.1
-  image_picker: ^1.2.1
-  intl: ^0.20.2
+  google_fonts: ^6.1.0
+  image_picker: ^1.0.7
+  intl: ^0.19.0
   
   # ✅ Firebase & Auth
-  google_sign_in: ^6.2.2   
-  firebase_core: ^3.8.0     
-  firebase_messaging: ^15.2.0 
-  flutter_local_notifications: ^18.0.1 
-  local_auth: ^2.3.0        
-  flutter_secure_storage: ^9.2.2 
-  flutter_dotenv: ^6.0.0
+  google_sign_in: ^6.2.1
+  firebase_core: ^3.1.0
+  firebase_messaging: ^15.0.1
+  flutter_local_notifications: ^18.0.1
+  
+  # ✅ ADDED BACK (Required for AuthService)
+  jwt_decoder: ^2.0.1
+  
+  local_auth: ^2.2.0
+  
+  # ✅ Storage
+  flutter_secure_storage: ^9.0.0
+  flutter_dotenv: ^5.1.0
   
   # ✅ Content Display
   qr_flutter: ^4.1.0
-  cached_network_image: ^3.4.1
-  share_plus: ^12.0.1
-  open_file: ^3.5.0
+  cached_network_image: ^3.3.1
+  share_plus: ^10.0.0
+  open_file: ^3.3.2
   add_2_calendar: ^3.0.1
   flutter_linkify: ^6.0.0
-  url_launcher: ^6.3.2
-  font_awesome_flutter: ^10.12.0
+  url_launcher: ^6.2.0
+  font_awesome_flutter: ^10.7.0
   video_player: ^2.8.2
   
-  # ✅ Replaced Discontinued Package
-  flutter_markdown_plus: ^1.0.7
+  flutter_markdown_plus: ^1.0.0
   
   # ✅ File & Media
-  file_picker: ^10.3.10
-  record: ^6.0.0
+  file_picker: ^8.0.0
+  record: ^5.1.0
   audioplayers: ^6.0.0
-  permission_handler: ^12.0.1
+  permission_handler: ^11.3.0
   shimmer: ^3.0.0
-  socket_io_client: ^3.1.4
+  socket_io_client: ^3.0.0
   badges: ^3.1.2
-  vibration: ^3.1.0
+  vibration: ^2.0.0
   
-  # ✅ Updated Router
-  go_router: ^17.1.0
+  # ✅ Router
+  go_router: ^14.2.0
   intl_phone_field: ^3.2.0
-  timeago: ^3.7.1
-  flutter_webrtc: ^1.3.0
+  timeago: ^3.6.1
+  flutter_webrtc: ^0.12.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0 
-  flutter_launcher_icons: ^0.14.4
+  flutter_lints: ^3.0.0 
+  flutter_launcher_icons: ^0.14.3
   flutter_native_splash: ^2.4.0
 
 flutter:
