--- a/ascon_mobile/pubspec.yaml
+++ b/ascon_mobile/pubspec.yaml
@@ -81,6 +81,7 @@ flutter:
     - assets/images/
     - assets/images/logo.png
     - assets/videos/
+    - assets/sounds/
 
 flutter_native_splash:
   color: "#FFFFFF"
