--- a/ascon_mobile/pubspec.yaml
+++ b/ascon_mobile/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   socket_io_client: ^3.1.4
   badges: ^3.1.2
   vibration: ^2.0.0
+  flutter_callkit_incoming: ^2.0.4
   
   # ✅ Router
   go_router: ^14.2.0
