--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
     "@socket.io/redis-adapter": "^8.3.0",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
-    "cloudinary": "^1.41.3",
+    "cloudinary": "^2.9.0",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -18,7 +19,6 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemailer": "^7.0.12",
     "redis": "^5.10.0",
     "socket.io": "^4.8.3",
     "swagger-jsdoc": "^6.2.8",
