--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^8.0.1",
     "redis": "^5.10.0",
     "socket.io": "^4.8.3",
     "swagger-jsdoc": "^6.2.8",
