--- a/ascon_mobile/pubspec.yaml
+++ b/ascon_mobile/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   intl_phone_field: ^3.2.0
   timeago: ^3.7.1
   flutter_webrtc: ^1.3.0
+  wakelock_plus: ^1.2.8
 
 dev_dependencies:
   flutter_test:
