--- a/ascon_mobile/pubspec.yaml
+++ b/ascon_mobile/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   local_auth: ^2.3.0
   
   # ✅ Storage
-  flutter_secure_storage: ^9.0.0
+  flutter_secure_storage: 10.0.0
   flutter_dotenv: ^5.1.0
   
   # ✅ Content Display
@@ -59,14 +59,13 @@ dependencies:
   socket_io_client: ^3.1.4
   badges: ^3.1.2
   vibration: ^2.0.0
-  flutter_callkit_incoming: ^2.0.4
   
   # ✅ Router
   go_router: ^14.2.0
   intl_phone_field: ^3.2.0
   timeago: ^3.7.1
-  flutter_webrtc: ^1.3.0
   wakelock_plus: ^1.2.8
+  twilio_voice: ^0.3.2
 
 dev_dependencies:
   flutter_test:
