--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "socket.io": "^4.8.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "twilio": "^5.12.2",
     "winston": "^3.19.0"
   },
   "devDependencies": {
