--- a/ascon_mobile/pubspec.yaml
+++ b/ascon_mobile/pubspec.yaml
@@ -54,7 +54,7 @@ dependencies:
   file_picker: ^8.1.4
   record: ^6.2.0
   audioplayers: ^6.0.0
-  permission_handler: ^11.3.0
+  permission_handler: ^12.0.1
   shimmer: ^3.0.0
   socket_io_client: ^3.1.4
   badges: ^3.1.2
@@ -65,7 +65,7 @@ dependencies:
   intl_phone_field: ^3.2.0
   timeago: ^3.7.1
   wakelock_plus: ^1.2.8
-  twilio_voice: ^0.3.2
+  agora_rtc_engine: ^6.5.3
 
 dev_dependencies:
   flutter_test:
