--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@sendgrid/mail": "^8.1.6",
     "@socket.io/redis-adapter": "^8.3.0",
+    "agora-access-token": "^2.0.4",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.9.0",
@@ -27,7 +28,7 @@
     "winston": "^3.19.0"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
+    "jest": "^19.0.2",
     "socket.io-client": "^4.8.3"
   }
 }
